--- a/ProgrammingSkillsG5/.classpath
+++ b/ProgrammingSkillsG5/.classpath
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Eclipse/eclipse/plugins/mockito-core-2.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Eclipse/eclipse/plugins/byte-buddy-1.9.2.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Eclipse/eclipse/plugins/byte-buddy-agent-1.9.2.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Eclipse/eclipse/plugins/objenesis-3.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
